# couchtec-backend

./: Cargo.toml  README.md  test.json  test.sh
src/: auth.rs  db.rs  email.rs  handlers.rs  main.rs  utils.rs
