[package]
name = "couchtec-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
actix-web = { version= "4.0", features = ["rustls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", default-features = false, features = ["rustls-tls", "smtp-transport", "pool", "hostname", "builder"] }
dotenv = "0.15.0"
env_logger = "0.9"
thiserror = "1.0.61"
chrono = "0.4.38"